src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --blue1: #047FD9;
  --blue2: #3A48C1;
  --grey: #5A5A5A;
}

.title {
  background: linear-gradient(to bottom, var(--blue1), var(--blue2));
  -webkit-background-clip: text;
  background-clip: text;
  color: transparent;
  font-weight: bold;
  text-align: center;
  margin-bottom: 1em;
}

.title {
  font-size: 2em;
}

main {
  @apply py-12 px-16 mx-auto;
  max-width: 1400px;
  margin: 0 auto;
}

.content {
  @apply mt-20;
}

.content p {
  @apply mb-8;
}

.content p:last-child {
  @apply mb-0;
}

p {
  line-height: 1.96875em;
  text-align: justify
}

footer {
  @apply py-12 px-32;
  width: 100%;
  padding: 2em 7em;
  background-color: #F5F5F5;
}

footer > p {
  text-align: center;
}

@media screen and (max-width: 820px) {
  .content-pair {
    grid-template-columns: none;
    grid-template-rows: auto auto;
  }

  .content-pair-image {
    height: 300px;
  }
}

@media screen and (max-width: 580px) {
  main {
    @apply py-12 px-8;
  }

  .title {
    font-size: 1.5em;
  }

  footer {
    @apply py-6 px-8;
  }
}

@media screen and (max-width: 520px) {
  .content {
    @apply mt-8;
  }
}

